# ducky

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: actions.rs  cli.rs  fs_utils.rs  grouping.rs  hashing.rs  main.rs  output.rs
tests/: basic.rs
